--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,10 +50,15 @@ dependencies:
   image_picker: ^1.0.4
   image_cropper: ^5.0.0
   like_button: ^2.0.5
+  shared_preferences: ^2.2.2
+
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
